Set 1.64.0 beta2 as released

--- a/users/history/version_1_64_0.html
+++ b/users/history/version_1_64_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.64.0 beta 1</title>
+  <title>Version 1.64.0 beta 2</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -37,23 +37,74 @@
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.64.0 beta 1</span></h2>
+              "news-title">Version 1.64.0 beta 2</span></h2>
 
-              <p><span class=news-date">March 23rd, 2017 14:19 GMT</span></p>
-              <p><a href="/doc/libs/1_64_0_b1/">Documentation</a>
+              <p><span class=news-date">March 30th, 2017 16:23 GMT</span></p>
+              <p><a href="/doc/libs/1_64_0_b2/">Documentation</a>
               <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.1/source/boost_1_64_0_b1.tar.bz2">boost_1_64_0_b1.tar.bz2</a></td><td>b5c5abf127a3f723dafcc7cf55876c1bda9f014fb1b117f6a7f769e3cc407c4f</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.1/source/boost_1_64_0_b1.tar.gz">boost_1_64_0_b1.tar.gz</a></td><td>a7fe98a9a9f615f6fa68d8ea09ce725d19e3a4fe4719c21c9db29dff88b3b6e3</td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.1/source/boost_1_64_0_b1.7z">boost_1_64_0_b1.7z</a></td><td>8f0ba6b73fad15115049f9b3e7e27eae43be10a94b51a57142f3a27e55ef4beb</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.1/source/boost_1_64_0_b1.zip">boost_1_64_0_b1.zip</a></td><td>593005661af8dfe132b2b16bc2cd41339e6acd58456913f353d765090d7868f7</td></tr></table>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.tar.bz2">boost_1_64_0_b2.tar.bz2</a></td><td>92ec7cbf1e77c5979e381dd8104f9e96c0471c276e566272751a981d806db94b</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.tar.gz">boost_1_64_0_b2.tar.gz</a></td><td>da5670892b7b572808491b13a7b9421c3c18e6f395d6a5ec822466db466eda01</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.7z">boost_1_64_0_b2.7z</a></td><td>49c9339b9d8e7b2610ef84c80cd10b2252c119ebcc3222450beb0e94c1da1522</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.zip">boost_1_64_0_b2.zip</a></td><td>61d6e29e8a1d7503fe13a9d916842f0ec2e625f733b98b29ce563f8cbdb482bf</td></tr></table>
               <div class="news-description">
                 <div class="description">
 
 
+  <div id="version_1_64_0.new_libraries">
+    <h3><span class="link">New Libraries</span></h3>
+    <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/process/">Process</a>:</span>
+  Process library by Klemens
+          D. Morgenstern, that provides cross platorm ways to allows you to:
+        </div>
+        <ul>
+          <li>
+            <div>
+              create child processes
+            </div>
+          </li>
+          <li>
+            <div>
+              setup streams for child processes
+            </div>
+          </li>
+          <li>
+            <div>
+              communicate with child processes through streams (synchronously or
+              asynchronously)
+            </div>
+          </li>
+          <li>
+            <div>
+              wait for processes to exit (synchronously or asynchronously)
+            </div>
+          </li>
+          <li>
+            <div>
+              terminate processes
+            </div>
+          </li>
+        </ul>
+        <div>
+          Broken feature:
+        </div>
+        <ul>
+          <li>
+            <div>
+              <a href="https://github.com/klemens-morgenstern/boost-process/issues/67">GitHub
+              #67: <em>"group.wait() does not return"</em></a>.
+            </div>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_64_0.updated_libraries">
     <h3><span class="link">Updated Libraries</span></h3>
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/any/">Any</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/any/">Any</a>:</span>
           <ul>
             <li>
               <div>
@@ -87,7 +138,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/atomic/">Atomic</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/atomic/">Atomic</a>:</span>
           <ul>
             <li>
               <div>
@@ -100,7 +151,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/config/">Config</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/config/">Config</a>:</span>
           <ul>
             <li>
               <div>
@@ -113,7 +164,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -148,7 +199,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -180,7 +231,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/conversion/">Conversion</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/conversion/">Conversion</a>:</span>
           <ul>
             <li>
               <div>
@@ -204,7 +255,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/core/">Core</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/core/">Core</a>:</span>
           <ul>
             <li>
               <div>
@@ -230,7 +281,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/coroutine2/">Coroutine2</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/coroutine2/">Coroutine2</a>:</span>
           <ul>
             <li>
               <div>
@@ -242,7 +293,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/dll/">DLL</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/dll/">DLL</a>:</span>
           <ul>
             <li>
               <div>
@@ -283,7 +334,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/fiber/">Fiber</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/fiber/">Fiber</a>:</span>
           <ul>
             <li>
               <div>
@@ -311,7 +362,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/functional/hash/">Hash</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/functional/hash/">Hash</a>:</span>
           <ul>
             <li>
               <div>
@@ -324,7 +375,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -387,7 +438,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -415,7 +466,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/lexical_cast/">LexicalCast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/lexical_cast/">LexicalCast</a>:</span>
           <ul>
             <li>
               <div>
@@ -433,7 +484,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -452,7 +503,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -530,7 +581,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -556,7 +607,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/program_options/">Program Options</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
               <div>
@@ -570,7 +621,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/regex/">Regex</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/regex/">Regex</a>:</span>
           <ul>
             <li>
               <div>
@@ -589,7 +640,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/smart_ptr/">Smart Pointers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/smart_ptr/">Smart Pointers</a>:</span>
           <ul>
             <li>
               <div>
@@ -609,11 +660,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/test/">Test</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/test/">Test</a>:</span>
           <ul>
             <li>
               <div>
-                Boost.test v3.5 see the <a href="/doc/libs/1_64_0_b1/libs/test/doc/html/boost_test/change_log.html">Change
+                Boost.test v3.5 see the <a href="/doc/libs/1_64_0_b2/libs/test/doc/html/boost_test/change_log.html">Change
                 log</a> section for more details.
               </div>
             </li>
@@ -665,7 +716,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/type_index/">TypeIndex</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
               <div>
@@ -691,7 +742,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/type_traits/">TypeTraits</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/type_traits/">TypeTraits</a>:</span>
           <ul>
             <li>
               <div>
@@ -704,7 +755,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/unordered/">Unordered</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/unordered/">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -719,7 +770,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b1/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
