--- a/users/history/version_1_64_0.html
+++ b/users/history/version_1_64_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.64.0 beta 2</title>
+  <title>Version 1.64.0</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -37,13 +37,13 @@
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.64.0 beta 2</span></h2>
+              "news-title">Version 1.64.0</span></h2>
 
-              <p><span class=news-date">March 30th, 2017 16:23 GMT</span></p>
-              <p><a href="/doc/libs/1_64_0_b2/">Documentation</a>
-              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.tar.bz2">boost_1_64_0_b2.tar.bz2</a></td><td>92ec7cbf1e77c5979e381dd8104f9e96c0471c276e566272751a981d806db94b</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.tar.gz">boost_1_64_0_b2.tar.gz</a></td><td>da5670892b7b572808491b13a7b9421c3c18e6f395d6a5ec822466db466eda01</td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.7z">boost_1_64_0_b2.7z</a></td><td>49c9339b9d8e7b2610ef84c80cd10b2252c119ebcc3222450beb0e94c1da1522</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0.beta.2/source/boost_1_64_0_b2.zip">boost_1_64_0_b2.zip</a></td><td>61d6e29e8a1d7503fe13a9d916842f0ec2e625f733b98b29ce563f8cbdb482bf</td></tr></table>
+              <p><span class=news-date">April 19th, 2017 17:42 GMT</span></p>
+              <p><a href="/doc/libs/1_64_0/">Documentation</a>
+              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0/source/boost_1_64_0.tar.bz2">boost_1_64_0.tar.bz2</a></td><td>7bcc5caace97baa948931d712ea5f37038dbb1c5d89b43ad4def4ed7cb683332</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0/source/boost_1_64_0.tar.gz">boost_1_64_0.tar.gz</a></td><td>0445c22a5ef3bd69f5dfb48354978421a85ab395254a26b1ffb0aa1bfd63a108</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0/source/boost_1_64_0.7z">boost_1_64_0.7z</a></td><td>49c6abfeb5b480f6a86119c0d57235966b4690ee6ff9e6401ee868244808d155</td></tr><tr><td><a href="https://dl.bintray.com/boostorg/beta/1.64.0/source/boost_1_64_0.zip">boost_1_64_0.zip</a></td><td>b99973c805f38b549dbeaf88701c0abeff8b0e8eaa4066df47cac10a32097523</td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -53,7 +53,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/process/">Process</a>:</span>
+          <span class="library"><a href="/libs/process/">Process</a>:</span>
   Process library by Klemens
           D. Morgenstern, that provides cross platorm ways to allows you to:
         </div>
@@ -104,7 +104,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/any/">Any</a>:</span>
+          <span class="library"><a href="/libs/any/">Any</a>:</span>
           <ul>
             <li>
               <div>
@@ -138,7 +138,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/atomic/">Atomic</a>:</span>
+          <span class="library"><a href="/libs/atomic/">Atomic</a>:</span>
           <ul>
             <li>
               <div>
@@ -151,7 +151,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/config/">Config</a>:</span>
+          <span class="library"><a href="/libs/config/">Config</a>:</span>
           <ul>
             <li>
               <div>
@@ -164,7 +164,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -199,7 +199,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -213,7 +213,17 @@
             </li>
             <li>
               <div>
+                stack manipulation on MIPS fixed
+              </div>
+            </li>
+            <li>
+              <div>
                 <a href="https://svn.boost.org/trac/boost/ticket/12719">#12719</a> segmentation fault when built with mingw-w64
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/12948">#12948</a> Unexpected snprintf result is on Android ARM
               </div>
             </li>
             <li>
@@ -226,12 +236,28 @@
                 #39: Unknown directive .cpu on aarch64 with Clang 3.8 on Android
               </div>
             </li>
+            <li>
+              <div>
+                #41: std::bind() fails with invoke()
+              </div>
+            </li>
+            <li>
+              <div>
+                #46: "rename of continuation member functions" missed a
+                spot
+              </div>
+            </li>
+            <li>
+              <div>
+                #50: bad assembly for fcontext on ppc64/sysv/elf
+              </div>
+            </li>
           </ul>
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/conversion/">Conversion</a>:</span>
+          <span class="library"><a href="/libs/conversion/">Conversion</a>:</span>
           <ul>
             <li>
               <div>
@@ -255,7 +281,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/core/">Core</a>:</span>
+          <span class="library"><a href="/libs/core/">Core</a>:</span>
           <ul>
             <li>
               <div>
@@ -281,7 +307,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/coroutine2/">Coroutine2</a>:</span>
+          <span class="library"><a href="/libs/coroutine2/">Coroutine2</a>:</span>
           <ul>
             <li>
               <div>
@@ -293,7 +319,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/dll/">DLL</a>:</span>
+          <span class="library"><a href="/libs/dll/">DLL</a>:</span>
           <ul>
             <li>
               <div>
@@ -334,11 +360,21 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/fiber/">Fiber</a>:</span>
+          <span class="library"><a href="/libs/fiber/">Fiber</a>:</span>
           <ul>
             <li>
               <div>
+                (un)bounded_channel&lt;&gt; removed
+              </div>
+            </li>
+            <li>
+              <div>
                 #100: ASIO: unbuffered_channel / scheduler notify issue
+              </div>
+            </li>
+            <li>
+              <div>
+                #105: skynet variants crash on windows
               </div>
             </li>
             <li>
@@ -349,12 +385,20 @@
             </li>
             <li>
               <div>
+                #110: Compile error on ARMv6
+              </div>
+            </li>
+            <li>
+              <div>
                 #111: endless-loop in buffered_channel::try_value_pop()
               </div>
             </li>
             <li>
               <div>
-                (un)bounded_channel&lt;&gt; removed
+                #114: buffered_channel::try_push<code> <span class="identifier">does</span>
+                <span class="keyword">not</span> <span class="identifier">wake</span>
+                <span class="identifier">fibers</span> <span class="identifier">in</span>
+                </code>pop`
               </div>
             </li>
           </ul>
@@ -362,7 +406,126 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/functional/hash/">Hash</a>:</span>
+          <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Improvements:
+                <ul>
+                  <li>
+                    <div>
+                      matrix transformation is now based on Boost.QVM instead of
+                      Boost.Ublas
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Breaking changes:
+                <ul>
+                  <li>
+                    <div>
+                      ublas_transformer is renamed to matrix_transformer
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      explicit modifier is added to constructors of rtree index::dynamic_*
+                      parameters
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      strategy::area::huiller replaced by strategy::area::spherical
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Solved issues:
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/geometry/issues/363">363</a>
+                      Missing includes in geometry/index/parameters.hpp
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/geometry/issues/364">364</a>
+                      within(Linear, Areal) compilation error when arguments use
+                      different point types
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/geometry/issues/370">370</a>
+                      Buffer Seg Faults with Ring as Input
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Solved tickets:
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/11930">11930</a>
+                      Inaccuracy of area::huiller strategy
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/11931">11931</a>
+                      Wrong spherical area with pole encircling polygons
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12566">12566</a>
+                      Ambiguous template instantiation in equal_to&lt;&gt; when pair
+                      value contains raw pointer
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12861">12861</a>
+                      Segmentation fault in stdlibc++ (gcc 4.8.2) affecting rtree
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12885">12885</a>
+                      Use BOOST_THROW_EXCEPTION instead of throw
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Bugfixes:
+                <ul>
+                  <li>
+                    <div>
+                      Fix distance_measure in get_turn_info
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/functional/hash/">Hash</a>:</span>
           <ul>
             <li>
               <div>
@@ -375,7 +538,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -438,7 +601,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -466,7 +629,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/lexical_cast/">LexicalCast</a>:</span>
+          <span class="library"><a href="/libs/lexical_cast/">LexicalCast</a>:</span>
           <ul>
             <li>
               <div>
@@ -484,7 +647,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -503,7 +666,25 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed a bug related to ambiguous references in the presence of more
+                than one ranked index (ticket <a href="https://svn.boost.org/trac/boost/ticket/12955">#12955</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Maintenance fixes.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -581,7 +762,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -607,7 +788,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/program_options/">Program Options</a>:</span>
+          <span class="library"><a href="/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
               <div>
@@ -621,7 +802,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/regex/">Regex</a>:</span>
+          <span class="library"><a href="/libs/regex/">Regex</a>:</span>
           <ul>
             <li>
               <div>
@@ -640,7 +821,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/smart_ptr/">Smart Pointers</a>:</span>
+          <span class="library"><a href="/libs/smart_ptr/">Smart Pointers</a>:</span>
           <ul>
             <li>
               <div>
@@ -660,11 +841,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/test/">Test</a>:</span>
+          <span class="library"><a href="/libs/test/">Test</a>:</span>
           <ul>
             <li>
               <div>
-                Boost.test v3.5 see the <a href="/doc/libs/1_64_0_b2/libs/test/doc/html/boost_test/change_log.html">Change
+                Boost.test v3.5 see the <a href="/doc/libs/1_64_0/libs/test/doc/html/boost_test/change_log.html">Change
                 log</a> section for more details.
               </div>
             </li>
@@ -716,7 +897,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/type_index/">TypeIndex</a>:</span>
+          <span class="library"><a href="/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
               <div>
@@ -742,7 +923,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/type_traits/">TypeTraits</a>:</span>
+          <span class="library"><a href="/libs/type_traits/">TypeTraits</a>:</span>
           <ul>
             <li>
               <div>
@@ -755,7 +936,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/unordered/">Unordered</a>:</span>
+          <span class="library"><a href="/libs/unordered/">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -770,7 +951,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_64_0_b2/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
