--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -622,7 +622,22 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
-                  <tr>
+		<tr>
+                  <td>Boost 1.64.0 Released</td>
+
+                  <td></td>
+
+                  <td>Rene Rivera</td>
+
+                  <td>April 19, 2017</td>
+
+                  <td>
+                    <a href=
+                    "http://www.boost.org/users/history/version_1_64_0.html">Notes</a>
+                  </td>
+                </tr>
+
+                <tr>
                     <!-- Added February 2014 -->
                     <td>Stacktrace</td>
 
