--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -515,8 +515,8 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
-                  <tr>
-                    <!-- Added February 2017 -->
+<!--                  <tr>
+                    <!== Added February 2017 ==>
                     <td>SIMD</td>
 
                     <td>Joel Falcou</td>
@@ -536,6 +536,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>April 15, 2017 - April 24, 2017</td>
                   </tr>
+-->
 
                   <tr>
                     <!-- Added March 2017 -->
