More updated libraries

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -361,6 +361,95 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/master/libs/test/">Test</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Boost.test v3.6 see the <a href="/doc/libs/master/libs/test/doc/html/boost_test/change_log.html">Change
+                log</a> section for more details.
+              </div>
+            </li>
+            <li>
+              <div>
+                New feature:
+                <ul>
+                  <li>
+                    <div>
+                      C++17 compatibility (tested on VS2017), thanks to <a href="https://github.com/DanielaE">Daniela
+                      Engert</a>
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Direct comparison of C-arrays in <code><span class="identifier">BOOST_TEST</span></code>
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Better global fixtures mechanism, and spitting of responsibilities
+                      with <a href="/doc/libs/master/libs/test/doc/html/boost_test/utf_reference/test_org_reference/test_org_boost_test_global_fixture.html"><code><span class="identifier">BOOST_TEST_GLOBAL_FIXTURE</span></code></a>
+                      for global fixtures and <a href="/doc/libs/master/libs/test/doc/html/boost_test/utf_reference/link_references/link_boost_test_global_configuration.html"><code><span class="identifier">BOOST_TEST_GLOBAL_CONFIGURATION</span></code></a>
+                      for global initialization (compile time configuration).
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Improved support for fixtures (<code><span class="identifier">setup</span></code>
+                      / <code><span class="identifier">teardown</span></code>
+                      member function) which enables better teardown time checks
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Breaking changes
+                <ul>
+                  <li>
+                    <div>
+                      Some API changes for the loggers
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Deprecating <code><span class="identifier">BOOST_GLOBAL_FIXTURE</span></code>
+                      in favor of <code><span class="identifier">BOOST_TEST_GLOBAL_FIXTURE</span></code>
+                      and <code><span class="identifier">BOOST_TEST_GLOBAL_CONFIGURATION</span></code>
+                      (see above)
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Bug fixes
+                <ul>
+                  <li>
+                    <div>
+                      Trac tickets <a href="https://svn.boost.org/trac/boost/ticket/5282">#5282</a>, <a href="https://svn.boost.org/trac/boost/ticket/5563">#5563</a>, <a href="https://svn.boost.org/trac/boost/ticket/11471">#11471</a>, <a href="https://svn.boost.org/trac/boost/ticket/11962">#11962</a>,
+                      <a href="https://svn.boost.org/trac/boost/ticket/12228">#12228</a>
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Trac tickets <a href="https://svn.boost.org/trac/boost/ticket/12631">#12631</a>, <a href="https://svn.boost.org/trac/boost/ticket/13011">#13011</a>
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Pull request <a href="https://github.com/boostorg/test/pull/106">PR106</a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/master/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
@@ -413,6 +502,19 @@
               <div>
                 Avoid dereferencing pointers to uninitialized memory (<a href="https://github.com/boostorg/unordered/pull/5">PR
                 #5</a>).
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/utility/">Utility</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Improved compatibility of <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">next</span></code>/<code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">prior</span></code> with SFINAE-unfriendly iterators.
+                <a href="https://svn.boost.org/trac/boost/ticket/10847">#10847</a>, <a href="https://svn.boost.org/trac/boost/ticket/13002">#13002</a>.
               </div>
             </li>
           </ul>
