Update Fit links for docs and github

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -64,11 +64,9 @@ http://www.boost.org/development/website_updating.html
 		    
                     <td>
                       <ul>
-			<li><a href="">
-                            Incubator</a></li>
-			<li><a href="">
+			<li><a href="https://github.com/pfultz2/Fit">
                             Github</a></li>
-			<li><a href="">
+			<li><a href="http://fit.readthedocs.io/en/latest/doc/">
                             Documentation</a></li>
                       </ul>
                     </td>                     
