Fit scheduled for review.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -68,7 +68,7 @@ http://www.boost.org/development/website_updating.html
                             Incubator</a></li>
 			<li><a href="https://github.com/pfultz2/Fit">
                             Github</a></li>
-			<li><a href="http://fit.readthedocs.io/en/latest/doc/">
+			<li><a href="http://fit.readthedocs.org/">
                             Documentation</a></li>
                       </ul>
                     </td>                     
