--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -121,6 +121,21 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
+		<tr>
+                  <td>Boost 1.65.0 Released</td>
+
+                  <td></td>
+
+                  <td>Daniel James</td>
+
+                  <td>August 21, 2017</td>
+
+                  <td>
+                    <a href=
+                    "http://www.boost.org/users/history/version_1_65_0.html">Notes</a>
+                  </td>
+                </tr>
+
                 <tr>
                   <!-- Added May 2017 -->
                   <td>mp11</td>
