Update patches index

--- a/patches/index.html
+++ b/patches/index.html
@@ -33,7 +33,21 @@ http://www.boost.org/development/website_updating.html
               late to be fixed in the release. Be careful as they have
               not been through the normal testing process.</p>
 
-              <h2>1.58.0</h2>
+            <h2>1.65.0</h2>
+
+            <p>Combined patch:
+            <a href="1_65_0/boost_1_65_0.patch">boost_1_65_0.patch</a>.</p>
+
+            <p>Individual patches:</p>
+
+            <ul>
+              <li><a href="1_65_0/0001-context-function-executed-by-resume_with-has-to-retu.patch">0001-context-function-executed-by-resume_with-has-to-retu.patch</a></li>
+              <li><a href="1_65_0/0002-fiber-resume_with-requires-tor-return-a-continuation.patch">0002-fiber-resume_with-requires-tor-return-a-continuation.patch</a></li>
+              <li><a href="1_65_0/0003-thread-130-Bug-in-boost-condition_variable-on-Window.patch">0003-thread-130-Bug-in-boost-condition_variable-on-Window.patch</a></li>
+              <li><a href="1_65_0/0004-thread-130-Bug-in-boost-condition_variable-on-Window.patch">0004-thread-130-Bug-in-boost-condition_variable-on-Window.patch</a></li>
+            </ul>
+
+            <h2>1.58.0</h2>
 
               <ul>
                 <li><a href=
