--- a/users/history/version_1_65_0.html
+++ b/users/history/version_1_65_0.html
@@ -56,6 +56,11 @@
   <div id="version_1_65_0.known_issues">
     <h3><span class="link">Known Issues</span></h3>
     <p>
+      These are patches from library authors which were found too late to be fixed
+      in the release. Be careful as they have not been through the normal testing
+      process.
+    </p>
+    <p>
       Combined patch for fixes to issues: <a href="/patches/1_65_0/boost_1_65_0.patch">boost_1_65_0.patch</a>.
       Use <code><span class="identifier">patch</span> <span class="special">-</span><span class="identifier">p1</span> <span class="special">&lt;</span> <span class="identifier">boost_1_65_0</span><span class="special">.</span><span class="identifier">patch</span></code> from the root of the boost repo to
       apply. Or you can apply the patches individually below.
@@ -63,16 +68,18 @@
     <ul>
       <li>
         <div>
-          Context and Fiber don't return continuations when they should. Patches:
+          Context and Fiber don't return continuations when they should.
           <ul>
             <li>
               <div>
-                <a href="/patches/1_65_0/0001-context-function-executed-by-resume_with-has-to-retu.patch">Context</a>
+                <a href="/patches/1_65_0/0001-context-function-executed-by-resume_with-has-to-retu.patch">Context
+                patch</a>
               </div>
             </li>
             <li>
               <div>
-                <a href="/patches/1_65_0/0002-fiber-resume_with-requires-tor-return-a-continuation.patch">Fiber</a>
+                <a href="/patches/1_65_0/0002-fiber-resume_with-requires-tor-return-a-continuation.patch">Fiber
+                patch</a>
               </div>
             </li>
           </ul>
@@ -80,18 +87,18 @@
       </li>
       <li>
         <div>
-          Thread: Bug in <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">condition_variable</span></code> on Windows. Patches:
+          Thread: Bug in <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">condition_variable</span></code> on Windows.
           <ul>
             <li>
               <div>
                 <a href="/patches/1_65_0/0003-thread-130-Bug-in-boost-condition_variable-on-Window.patch">Thread
-                1</a>
+                patch 1</a>
               </div>
             </li>
             <li>
               <div>
                 <a href="/patches/1_65_0/0004-thread-130-Bug-in-boost-condition_variable-on-Window.patch">Thread
-                2</a>
+                patch 2</a>
               </div>
             </li>
           </ul>
