Add test compilers
Not including compilers from develop, as the point release is only
tested on master.

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -962,17 +962,197 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.0, 4.0.1, 5.0.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11: 3.0, 3.1, 3.2, 3.3, 3.4, 4.0.1, 5.0.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++14: 3.5.0, 3.6.0, 3.7.1, 3.8.0, 3.9.1, 4.0.0, 5.0.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++17: 5.0.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++1z: 4.0.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.4.7, 4.5.3, 4.6.3, 4.7.2, 5.4.0, 7.1.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.4.7, 4.7.2, 4.7.3, 4.8.5, 4.9.4, 5.4.0, 6.4.0, 7.1.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14: 5.4.0, 5.4.1, 6.3.0, 6.4.0, 7.1.0, 7.2.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++17: 7.1.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++1z: 6.3.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 17.0
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
-    </ul>
-    <p>
-      Boost's additional test compilers include:
-    </p>
-    <ul>
       <li>
         <div>
-          <em>TODO</em>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Clang: 8.1.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11: 8.1.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++14: 8.1.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++1z: 8.1.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC: 3.4.5, 4.1.2, 4.2.4, 4.3.3, 4.4.0, 4.5.4
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.6.4, 4.7.3, 4.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14: 4.9.3, 5.1.0, 5.2.0, 5.3.0, 6.1.0, 6.2.0, 6.3.0, 6.4.0,
+                7.1.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 7.1, 8.0, 9.0, 10.0, 11.0, 12.0, 14.0, 14.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Android:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.6, 3.7, 3.8
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.9, 5.4
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14: 6.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.8.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11: 3.8.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++14: 3.8.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++1z: 3.8.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC, C++11: 4.4.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          SunOS:
+          <ul>
+            <li>
+              <div>
+                Oracle Solaris Studio: 12.5_next, 12.5
+              </div>
+            </li>
+            <li>
+              <div>
+                Oracle Solaris Studio, C++11: , 12.5_next, 12.5
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
