Fix notes for 1.65.1

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -46,7 +46,103 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/doc/libs/1_65_1/libs/config/">Config</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Version macro changes for CUDA.
+              </div>
+            </li>
+            <li>
+              <div>
+                Update last know MSVC version.
+              </div>
+            </li>
+            <li>
+              <div>
+                MSVC 14.11 supports structured bindings.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_65_1/libs/context/">Context</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Return a continuation from functions executed by <code><span class="identifier">resume_with</span></code>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_65_1/libs/fiber/">Fiber</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Return a continuation from functions executed by <code><span class="identifier">resume_with</span></code>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_65_1/libs/smart_ptr/">Smart Pointers</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fix Visual C++ version checks.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fix compilation for NVCC with host compiler clang.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_65_1/libs/stacktrace/">Stacktrace</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Update build testing file to detail with a MinGW issue.
+              </div>
+            </li>
+            <li>
+              <div>
+                Change preprocessor file extensions to work with the installation
+                system.
+              </div>
+            </li>
+            <li>
+              <div>
+                Support FreeBSD and other OSs that do not define <code><span class="identifier">_GNU_SOURCE</span></code>
+                but have <code><span class="identifier">_Unwind_Backtrace</span></code>
+                function.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_65_1/libs/thread/">Thread</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fix bug in <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">condition_variable</span></code>
+                on Windows (<a href="https://github.com/boostorg/thread/issues/130">#130</a>).
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
