--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -55,7 +55,7 @@
             </li>
             <li>
               <div>
-                Update last know MSVC version.
+                Update last known MSVC version.
               </div>
             </li>
             <li>
