Update the table of contents
And add an anchor for the old link, to fix any other existing links to it.

--- a/development/requirements.html
+++ b/development/requirements.html
@@ -54,8 +54,7 @@ http://www.boost.org/development/website_updating.html
                     <li><a href="#Design_and_Programming">Design and
                         programming</a></li>
 
-                    <li><a href="#Directory_structure">Directory
-                        structure and filenames</a></li>
+                    <li><a href="#Filenames">Filenames</a></li>
 
                     <li><a href="#Naming_consistency">Naming
                         consistency</a></li>
@@ -721,6 +720,7 @@ explicit extra ;</pre>
               </ul>
 
               <h3>
+                <a name="Directory_structure" id="Directory_structure"></a>
                 <a name="Filenames" id="Filenames"></a>Filenames
               </h3>
 
