Add list of removed libraries

--- a/users/history/version_1_65_0.html
+++ b/users/history/version_1_65_0.html
@@ -133,6 +133,16 @@
       </li>
     </ul>
   </div>
+  <div id="version_1_65_0.removed_libraries">
+    <h3><span class="link">Removed Libraries</span></h3>
+    <ul>
+      <li>
+        <div>
+          TR1
+        </div>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_65_0.updated_libraries">
     <h3><span class="link">Updated Libraries</span></h3>
     <ul>
