--- a/users/history/version_1_65_1.html
+++ b/users/history/version_1_65_1.html
@@ -392,6 +392,17 @@
       </li>
     </ul>
   </div>
+  <div id="version_1_65_1.removed_libraries_in_1_65_0">
+    <h3><span class="link">Removed Libraries
+    in 1.65.0</span></h3>
+    <ul>
+      <li>
+        <div>
+          TR1
+        </div>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_65_1.updated_libraries_in_1_65_0">
     <h3><span class="link">Updated Libraries
     in 1.65.0</span></h3>
