Add explicit-failures-markup.xml to library organization

--- a/development/requirements.html
+++ b/development/requirements.html
@@ -338,6 +338,15 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
+                    <td><code>meta/explicit-failures-markup.xml</code></td>
+
+                    <td>XML file describing expected test failures, used to
+                    generate the test report.</td>
+
+                    <td>Optional</td>
+                  </tr>
+
+                  <tr>
                     <td><code>src</code></td>
 
                     <td>Source files which must be compiled to build the
