--- a/map.html
+++ b/map.html
@@ -40,7 +40,7 @@ http://www.boost.org/development/website_updating.html
                   <!--#include virtual="/common/menu-development.html" --></li>
 
                   <li id="site-map-section-doc">
-                  <!--#include virtual="/common/menu-doc.html" --></li>
+                  <!--#include virtual="/generated/menu-doc.html" --></li>
                 </ul>
               </div>
             </div>
