--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -78,7 +78,7 @@
           <ul>
             <li>
               <div>
-                Implemented interface changes to reflect the Networking TS (<a href="www.open-std.org/jtc1/sc22/wg21/docs/papers/2017/n4656.pdf">N4656</a>).
+                Implemented interface changes to reflect the Networking TS (<a href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2017/n4656.pdf">N4656</a>).
                 <ul>
                   <li>
                     <div>
